# mcu_chats_with_you_2

./: Cargo.toml  README.md
src/: main.rs
