[package]
name = "mcu_chats_with_you_2"
version = "1.0.0"
edition = "2021"
authors = [" software9119.technology" ]
license = "MIT"

[dependencies]
microbit-v2 = "0.13.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
ug_max = "4.0.1"

[profile.release]
opt-level=0
lto="off"
panic="abort"
codegen-units=1
strip="symbols"

[features]
panic_halt = []
panic_abort = []
